--- a/shippable.yml
+++ b/shippable.yml
@@ -1,9 +1,9 @@
 language: java
 
-jdk:
+jdk
    - oraclejdk7
-   #- openjdk6
-  # - openjdk7
+   - openjdk6
+   - openjdk7
 
 after_success:
    - mvn clean cobertura:cobertura
