--- a/shippable.yml
+++ b/shippable.yml
@@ -1,10 +1,11 @@
 language: java
 
-jdk
-   - oraclejdk7
+jdk:
+  # - oraclejdk7
    - openjdk6
    - openjdk7
-
+after_script:
+  - cp README.md ./shippable
 after_success:
    - mvn clean cobertura:cobertura
    - mvn test
